--- a/mods/argonauts.pw.toml
+++ b/mods/argonauts.pw.toml
@@ -1,6 +1,6 @@
 name = "Argonauts"
 filename = "argonauts-forge-1.20.1-1.0.10.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/bb2EpKpx/versions/r0eKAc5z/argonauts-forge-1.20.1-1.0.10.jar"
